III-2387 improve styling + update categories.json with requested themes

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -47,6 +47,14 @@
     color: @text-color;
   }
 
+  .theme-refinement {
+   margin-bottom: 1em;
+  }
+
+  .list-themes {
+    line-height: 2.5;
+  }
+
   .btn {
     padding: @padding-base-vertical @padding-small-horizontal;
   }
