--- a/src/event_form/components/place/event-form-place-modal.html
+++ b/src/event_form/components/place/event-form-place-modal.html
@@ -1,53 +1,53 @@
 <div class="modal-header">
-    <h4 class="modal-title">{{translateLocation('title')}}</h4>
+    <h4 class="modal-title">{{::translateLocation('title')}}</h4>
 </div>
 <div class="modal-body">
     <form name="placeForm" class="css-form">
         <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.name.$error.required }">
-            <label for="name">{{translateLocation('name')}}</label>
+            <label for="name">{{::translateLocation('name')}}</label>
             <input id="name" class="form-control" type="text" ng-model="newPlace.name" name="name" required>
             <span class="help-block" ng-show="showValidation && placeForm.name.$error.required">
-        {{translateLocation('name_validation')}}
+        {{::translateLocation('name_validation')}}
       </span>
         </div>
         <div class="row">
             <div class="col-xs-8">
                 <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.address_streetAddress.$error.required }">
-                    <label for="locatie-straat">{{translateLocation('street')}}</label>
+                    <label for="locatie-straat">{{::translateLocation('street')}}</label>
                     <input class="form-control" id="locatie-straat" name="address_streetAddress" type="text" ng-model="newPlace.address.streetAddress" required>
                     <span class="help-block" ng-show="showValidation && placeForm.address_streetAddress.$error.required">
-            {{translateLocation('street_validation')}}
+            {{::translateLocation('street_validation')}}
           </span>
                 </div>
             </div>
             <div class="col-xs-4">
                 <div class="form-group">
-                    <label>{{translateLocation('city')}}</label>
+                    <label>{{::translateLocation('city')}}</label>
                     <p class="form-control-static" id="waar-locatie-toevoegen-gemeente" ng-bind="newPlace.address.addressLocality"></p>
                 </div>
             </div>
         </div>
         <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.eventType.$error.required }">
-            <label for="locatie-toevoegen-types">{{translateLocation('category')}}</label>
-            <p class="help-block">{{translateLocation('category_help')}}</p>
+            <label for="locatie-toevoegen-types">{{::translateLocation('category')}}</label>
+            <p class="help-block">{{::translateLocation('category_help')}}</p>
             <select class="form-control" size="4" name="eventType" id="locatie-toevoegen-types" ng-model="newPlace.eventType" required  ng-options="category as category.label for category in categories | orderBy:'label' track by category.id">
             </select>
             <span class="help-block" ng-show="showValidation && placeForm.eventType.$error.required">
-        {{translateLocation('category_validation')}}
+        {{::translateLocation('category_validation')}}
       </span>
         </div>
         <div class="row">
             <div class="col-xs-12">
                 <div class="alert alert-danger" ng-show="error">
-                    {{translateLocation('error')}}
+                    {{translateLocation(errorMessage)}}
                 </div>
             </div>
         </div>
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="resetAddLocation()">{{translateLocation('cancel')}}</button>
+    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="resetAddLocation()">{{::translateLocation('cancel')}}</button>
     <button type="button" class="btn btn-primary" ng-click="addLocation()">
-        {{translateLocation('add')}} <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
+        {{::translateLocation('add')}} <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
   </button>
 </div>
