III-2394 translate-once for eventForm step4

--- a/src/event_form/components/suggestions/place-suggestion.directive.html
+++ b/src/event_form/components/suggestions/place-suggestion.directive.html
@@ -3,7 +3,7 @@
      ng-click="previewSuggestedItem(event)">
     <small class="label label-default" ng-bind="::event.type.label"></small><br>
     <strong class="title" ng-bind="::event.name"></strong><br>
-    <span translate="eventForm.step4.suggestions.permanent"></span>
+    <span translate-once="eventForm.step4.suggestions.permanent"></span>
     <br>
     <small class="preview-corner"></small>
     <i class="fa fa-eye preview-icon"></i>
