--- a/src/core/components/workflow-status/udb.workflow-status.directive.html
+++ b/src/core/components/workflow-status/udb.workflow-status.directive.html
@@ -3,7 +3,7 @@
     <td>
         <span ng-if="cm.event.available" ng-bind="cm.event.available | date: 'dd/MM/yyyy'">
                     </span>
-        <span ng-if="!cm.event.available && !cm.event.availableFrom">{{cm.status | translate }}</span>
+        <span ng-if="!cm.event.available && !cm.event.availableFrom">{{::cm.status | translate }}</span>
         <span ng-if="!cm.event.available && cm.event.availableFrom">Online vanaf {{cm.event.availableFrom | date: 'dd/MM/yyyy'}}</span>
     </td>
 </tr>
