--- a/src/event_form/components/place/event-form-place-modal.html
+++ b/src/event_form/components/place/event-form-place-modal.html
@@ -50,7 +50,11 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="resetAddLocation()">{{translateLocation('cancel')}}</button>
+    <button type="button"
+            class="btn btn-default"
+            data-dismiss="modal"
+            translate-once="location.cancel"
+            ng-click="resetAddLocation()"></button>
     <button type="button"
             class="btn btn-primary"
             ng-click="addLocation()">
