--- a/src/uitpas/components/card-systems/card-systems.html
+++ b/src/uitpas/components/card-systems/card-systems.html
@@ -1,26 +1,31 @@
 <div class="form-group">
     <div class="card-system">
         <label translate="uitpas.cardSystems.card_systems"></label>
+        <span ng-hide="::(cardSystemSelector.availableCardSystems === undefined ? undefined : true)">
+            <i class="fa fa-circle-o-notch fa-spin"></i> Loading...
+        </span>
 
-        <div class="uitpas-card-system row" ng-repeat="cardSystem in cardSystemSelector.availableCardSystems">
-            <div class="col-sm-6">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"
-                               ng-model="cardSystem.active"
-                               ng-change="cardSystemSelector.activeCardSystemsChanged(cardSystem)">
-                            <span ng-bind="::cardSystem.name"></span>
-                    </label>
+        <div class="card-systems" ng-if="::cardSystemSelector.availableCardSystems">
+            <div class="uitpas-card-system row" ng-repeat="cardSystem in cardSystemSelector.availableCardSystems">
+                <div class="col-sm-6">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"
+                                   ng-model="cardSystem.active"
+                                   ng-change="cardSystemSelector.activeCardSystemsChanged(cardSystem)">
+                                <span ng-bind="::cardSystem.name"></span>
+                        </label>
+                    </div>
                 </div>
-            </div>
 
 
-            <div class="col-sm-6" ng-if="cardSystem.distributionKeys.length">
-                <select ng-model="cardSystem.assignedDistributionKey"
-                        ng-options="key as key.name for key in cardSystem.distributionKeys track by key.id"
-                        ng-change="cardSystemSelector.distributionKeyAssigned()">
-                    <option value="" translate="uitpas.cardSystems.choose"></option>
-                </select>
+                <div class="col-sm-6" ng-if="cardSystem.distributionKeys.length">
+                    <select ng-model="cardSystem.assignedDistributionKey"
+                            ng-options="key as key.name for key in cardSystem.distributionKeys track by key.id"
+                            ng-change="cardSystemSelector.distributionKeyAssigned()">
+                        <option value="" translate="uitpas.cardSystems.choose"></option>
+                    </select>
+                </div>
             </div>
         </div>
     </div>
