--- a/src/uitpas/components/card-systems/card-systems.html
+++ b/src/uitpas/components/card-systems/card-systems.html
@@ -1,7 +1,7 @@
 <div class="form-group">
     <div class="card-system">
         <label translate="uitpas.cardSystems.card_systems"></label>
-        <span ng-hide="::(cardSystemSelector.availableCardSystems === undefined ? undefined : true)">
+        <span ng-hide="cardSystemSelector.uitpasUnavailable || (cardSystemSelector.availableCardSystems !== undefined)">
             <i class="fa fa-circle-o-notch fa-spin"></i> Loading...
         </span>
 
@@ -27,6 +27,11 @@
                     </select>
                 </div>
             </div>
+        </div>
+
+        <div class="alert alert-danger" role="alert" ng-show="cardSystemSelector.uitpasUnavailable">
+            <p translate="uitpas.cardSystems.unavailable"></p>
+            <button class="btn btn-default" ng-click="cardSystemSelector.refresh()" translate="uitpas.cardSystems.retry"></button>
         </div>
     </div>
 </div>
