--- a/src/uitpas/components/card-systems/card-systems.html
+++ b/src/uitpas/components/card-systems/card-systems.html
@@ -11,16 +11,21 @@
                     <div class="checkbox">
                         <label>
                             <input type="checkbox"
+                                   ng-disabled="cardSystemSelector.persistingCardSystems"
                                    ng-model="cardSystem.active"
                                    ng-change="cardSystemSelector.activeCardSystemsChanged(cardSystem)">
                                 <span ng-bind="::cardSystem.name"></span>
                         </label>
+                        <span ng-show="cardSystemSelector.persistingCardSystems">
+                            <i class="fa fa-circle-o-notch fa-spin"></i>
+                        </span>
                     </div>
                 </div>
 
 
                 <div class="col-sm-6" ng-if="cardSystem.distributionKeys.length">
                     <select ng-model="cardSystem.assignedDistributionKey"
+                            ng-disabled="cardSystemSelector.persistingCardSystems"
                             ng-options="key as key.name for key in cardSystem.distributionKeys track by key.id"
                             ng-change="cardSystemSelector.distributionKeyAssigned()">
                         <option value="" translate="uitpas.cardSystems.choose"></option>
