III-2392 Check if there are ticket sales before alowing price and organizer changes

--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -41,6 +41,7 @@
             </td>
           </tr>
         </table>
+        <div ng-if="$ctrl.hasTicketSales" class="alert alert-danger" translate="uitpas.uitpasInfo.cantChangePrice"></div>
       </div>
 
     </div>
