--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -42,6 +42,7 @@
           </tr>
         </table>
         <div ng-if="$ctrl.hasTicketSales" class="alert alert-danger" translate="uitpas.uitpasInfo.cantChangePrice"></div>
+        <div ng-if="$ctrl.hasUitpasError" class="alert alert-danger" translate="uitpas.uitpasInfo.unavailable"></div>
       </div>
 
     </div>
