--- a/src/search/components/translation-status.component.html
+++ b/src/search/components/translation-status.component.html
@@ -1,4 +1,4 @@
-<ul class="list-unstyled">
+<ul class="list-unstyled list-inline visible-lg-inline">
   <li ng-repeat="language in tsc.availableLanguages">
     <span class="fa {{tsc.getLanguageTranslationIcon(language)}}"></span>
     {{language}}
