--- a/src/core/components/image-detail/image-detail.directive.html
+++ b/src/core/components/image-detail/image-detail.directive.html
@@ -1,6 +1,6 @@
 <tr ng-class="::{muted: !images.length}">
     <td>
-        <span class="row-label">{{translateImageDetail('label')}}</span>
+        <span class="row-label" translate-once="imageDetail.label"></span>
     </td>
     <td ng-if="::images.length">
         <ul class="list-unstyled media-list">
@@ -9,11 +9,11 @@
                     <a target="_blank" href="{{image.contentUrl}}">
                         <img class="media-object"
                              src="{{image.contentUrl}}?height=100"
-                             alt="{{translateImageDetail('alt_image', {index: $index}) }}">
+                             alt="{{::translateImageDetail('alt_image', {index: $index}) }}">
                     </a>
                 </div>
                 <div class="media-body">
-                   <span ng-if="$first" class="label label-default">{{translateImageDetail('main_image')}}</span>
+                   <span ng-if="$first" class="label label-default" translate-once="imageDetail.main_image"></span>
                     <p>{{image.description}}</p>
                     <p class="text-muted">&copy; {{image.copyrightHolder}}</p>
                 </div>
@@ -21,5 +21,5 @@
             </li>
         </ul>
     </td>
-    <td ng-if="::!images.length">{{translateImageDetail('no_images')}}</td>
+    <td ng-if="::!images.length" translate-once="imageDetail.no_images"></td>
 </tr>
