--- a/src/core/components/workflow-status/udb.workflow-status.directive.html
+++ b/src/core/components/workflow-status/udb.workflow-status.directive.html
@@ -1,5 +1,5 @@
 <tr>
-    <td><span class="row-label">{{translateWorkFlow('label')}}</span></td>
+    <td><span class="row-label" translate-once="workflowStatus.label"></span></td>
     <td>
         <span ng-if="cm.event.available" ng-bind="cm.event.available | date: 'dd/MM/yyyy'">
                     </span>
@@ -8,7 +8,7 @@
     </td>
 </tr>
 <tr>
-    <td><span class="row-label">{{translateWorkFlow('id')}}</span></td>
+    <td><span class="row-label" translate-once="workflowStatus.id"></span></td>
     <td>
         <ul>
             <li ng-repeat="id in cm.eventIds(cm.event)" ng-switch="cm.isUrl(id)">
