III-2394 fix type in add location modal for categories

--- a/src/event_form/components/place/event-form-place-modal.html
+++ b/src/event_form/components/place/event-form-place-modal.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.eventType.$error.required }">
-            <label for="locatie-toevoegen-types" translate-once="location.catergory"></label>
+            <label for="locatie-toevoegen-types" translate-once="location.category"></label>
             <p class="help-block" translate-once="location.category_help"></p>
             <select class="form-control" size="4" name="eventType" id="locatie-toevoegen-types" ng-model="newPlace.eventType" required  ng-options="category as category.label for category in categories | orderBy:'label' track by category.id">
             </select>
