--- a/src/event_form/components/organizer-contact/organizer-contact.html
+++ b/src/event_form/components/organizer-contact/organizer-contact.html
@@ -25,7 +25,7 @@
         <div ng-switch="occ.newContact.type">
           <label ng-switch-when="url">Geef een URL in</label>
           <label ng-switch-when="email">Geef een e-mailadres in</label>
-          <label ng-switch-when="phone">Geef een telefoonnummer in</label>
+          <label ng-switch-when="phone">Geef een telefoonnummer in<small class="text-muted">, bv. 011 32 43 54</small></label>
         </div>
         <div ng-switch="occ.newContact.type">
           <div ng-switch-when="url" class="form-group" ng-class="{ 'has-error': urlContactForm.url.$touched && urlContactForm.url.$invalid }">
