--- a/src/duplication/event-duplication-footer.component.html
+++ b/src/duplication/event-duplication-footer.component.html
@@ -3,7 +3,8 @@
             ng-disabled="duplication.duplicating"
             ng-click="duplication.createDuplicate()"
             role="button"
-            ng-class="{disabled: !duplication.readyForDuplication}">Kopiëren en aanpassen</button>
+            ng-class="{disabled: !duplication.readyForDuplication}"
+            translate="duplicate.title"></button>
     <i class="fa fa-circle-o-notch fa-spin" ng-show="duplication.duplicating"></i>
-    <span ng-show="duplication.asyncError">Er ging iets mis tijdens het aanmaken van een kopie!</span>
+    <span ng-show="duplication.asyncError" translate="duplicate.error"></span>
 </div>
