--- a/src/duplication/event-duplication-step.component.html
+++ b/src/duplication/event-duplication-step.component.html
@@ -1,7 +1,5 @@
-<h1 class="title">Kopiëren en aanpassen</h1>
+<h1 class="title" translate="duplicate.title"></h1>
 
-<div class="alert alert-info" role="alert">
-  Je staat op het punt een evenement te kopiëren. Kies een tijdstip voor dit evenement.
-</div>
+<div class="alert alert-info" role="alert" translate="duplicate.description"></div>
 
 <udb-event-duplication-calendar></udb-event-duplication-calendar>
