--- a/src/duplication/event-duplication-step.component.html
+++ b/src/duplication/event-duplication-step.component.html
@@ -1,5 +1,5 @@
-<h1 class="title" translate="duplicate.title"></h1>
+<h1 class="title" translate-once="duplicate.title"></h1>
 
-<div class="alert alert-info" role="alert" translate="duplicate.description"></div>
+<div class="alert alert-info" role="alert" translate-once="duplicate.description"></div>
 
 <udb-event-duplication-calendar></udb-event-duplication-calendar>
