--- a/src/dashboard/components/place-delete-confirm-modal.html
+++ b/src/dashboard/components/place-delete-confirm-modal.html
@@ -2,11 +2,11 @@
     <div class="row">
 
       <div class="col-xs-12" ng-if="!hasEvents">
-        <p>Ben je zeker dat je "<span ng-bind="::place.name"></span>" wil verwijderen?</p>
+        <p translate-once="dashboard.delete.sure" translate-values="{ name: '{{ place.name }}' }"></p>
       </div>
 
       <div class="col-xs-12" ng-if="hasEvents">
-        <p>De locatie "<span ng-bind="::place.name"></span>" kan niet verwijderd worden omdat er activiteiten gepland zijn.</p>
+        <p translate-once="dashboard.delete.error_location" translate-values="{ name: '{{ place.name }}'}"></p>
 
         <ul>
           <li ng-click="$dismiss('navigating away')" ng-repeat="event in events" udb-event-link ng-hide="fetching"></li>
@@ -14,17 +14,15 @@
 
       </div>
 
-      <div class="alert alert-danger" ng-show="error">
-        Er ging iets fout bij het verwijderen van de locatie.
+      <div class="alert alert-danger" ng-show="error" translate-once="dashboard.delete.error">
       </div>
 
     </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="cancelRemoval()">
-    Annuleren
+  <button type="button" class="btn btn-default" ng-click="cancelRemoval()" translate-once="dashboard.delete.cancel">
   </button>
   <button type="button" class="btn btn-primary" ng-disabled="hasEvents" ng-click="deletePlace()">
-    Verwijderen <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
+    <span translate-once="dashboard.delete.delete"></span> <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
   </button>
 </div>
